# isaac-ped.github.io

./: README.md  bib2html.py  cs.bib  grid.html  health-and-safety.html  index.html  isaacdeb.html  neuro.bib  scrolling.js  stream.html  style.css
gibbering_attempts/: data.csv  gibbering.html  plot.py  pyproject.toml  shell.nix
