[tool.poetry]
name = "gibbering"
version = "0.1.0"
description = ""
authors = ["Isaac Pedisich <isaac@pipe.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.14.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
